# Vision_Lab

./: README.md
3D_reconstruction/: 三维重建数据集.md  基于单目视觉的三维重建算法综述.md
Deep_Learning/: GPU Compute Capability.md
Deep_Learning/mofan_learning/PyTorch_Learning/: 2.1.py
Deep_Learning/mofan_learning/Tensorflow_Learning/: 10.py  11.py  12.py  14.py  6.py  7.py  8.py  9.py
Deep_Learning/mofan_learning/Tensorflow_Learning/logs/: events.out.tfevents.1556371348.sqg
Deep_Learning/point_cloud/: 点云深度学习.md
Deep_Learning/point_cloud/A Tutorial on 3D Deep Learning/: 网址
Deep_Learning/point_cloud/PointNet/: PointNet笔记.docx  实验结果.md
PCL_Learning/: 1.关于cmake.md  6D姿态估计.md  ICP介绍.md  pcd数据下载地址.txt  点云配准介绍.md
PCL_Learning/basic/: 4_点云分割与分类 Segmentation.md
PCL_Learning/basic/Features/: CMakeLists.txt  PFH_features.cpp  fasterPFH_features.cpp  normal_3d_feature.cpp  normal_estimation_using_integral_images.cpp  vFH_Feature.cpp
PCL_Learning/basic/Registration/: 1.pcd  interactive_icp.cpp
PCL_Learning/basic/Segmentation/: Difference_of_Normals_in_diff_radis__Segmentation.cpp  clusters_segmentation.cpp  color_based_region_growing_segmentation.cpp  cylinder_segmentation.cpp  min_Cut_Based_Segmentation.cpp  random_sample_consensus.cpp  supervoxel_clustering.cpp
PCL_Learning/basic/common/: CMakeLists.txt  compute_centroid.cpp
PCL_Learning/kinect2/libfreenect_read_data/: CMakeLists.txt  LICENSE  README.md  libfreenect_read_data.cpp
Pose_Estimation/: 开源项目.md
ROS/ORK/: 1.Ubuntu16.04安装KinectV2驱动lifreenect2.md  2.Ubuntu16.04安装Kinect v2与ROS相关驱动iai_kinect2.md  3.5ork使用教程.md  4.ork配置问题解决方法.md  5.Ubuntu16.04启动Kinect2时注意事项.md
SLAM/Bundle Adjustment/: BA介绍.md
SLAM/g2o/g2o_ba_example-master/: CMakeLists.txt
SLAM/gtsam-examples-master/cpp/examples/: Pose2SLAMExample.cpp
SLAM/slambook_gaoxiang/ch2/: CMakeLists.txt  libHelloSLAM.h  readme.md
SLAM/slambook_gaoxiang/ch3/useEigen/: eigenMatrix.cpp
SLAM/slambook_gaoxiang/ch3/useGeometry/: eigenGeometry.cpp
SLAM/slambook_gaoxiang/ch4/useSophus/: useSophus.cpp
SLAM/slambook_gaoxiang/ch5/imageBasics/: CMakeLists.txt
SLAM/slambook_gaoxiang/ch5/joinMap/: CMakeLists.txt  joinMap.cpp
SLAM/slambook_gaoxiang/ch7/: CMakeLists.txt  feature_extraction.cpp  pose_estimation_2d2d.cpp  pose_estimation_3d2d.cpp  pose_estimation_3d3d.cpp
SLAM/slambook_gaoxiang/ch8/directMethod/: CMakeLists.txt  direct_semidense.cpp  direct_sparse.cpp
SLAM/slambook_gaoxiang/mycode/BA_3d2d/: CMakeLists.txt  main.cpp
SLAM/slambook_gaoxiang/mycode/feature_extraction/: CMakeLists.txt  main.cpp
SLAM/slambook_gaoxiang/mycode/pose_estimation_2d2d/: CMakeLists.txt  main.cpp
